--- a/General/build.gradle
+++ b/General/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 7
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 7
@@ -15,9 +14,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
-    compile files('libs/commons-net-ftp-2.0.jar')
-    compile files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
+    implementation files('libs/commons-net-ftp-2.0.jar')
+    implementation files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
 }
