--- a/CaptureActivity/build.gradle
+++ b/CaptureActivity/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
+
 android {
-    compileSdkVersion 7
-    buildToolsVersion '27.0.3'
+    compileSdk 21
 
     defaultConfig {
         minSdkVersion 7
@@ -17,5 +17,5 @@ android {
 }
 
 dependencies {
-    compile files('libs/core.jar')
+    api files('libs/core.jar')
 }
