--- a/General/build.gradle
+++ b/General/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 7
-    buildToolsVersion '27.0.3'
+    compileSdk 21
 
     defaultConfig {
         minSdkVersion 7
@@ -18,6 +17,6 @@ android {
 }
 
 dependencies {
-    compile files('libs/commons-net-ftp-2.0.jar')
-    compile files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
+    api files('libs/commons-net-ftp-2.0.jar')
+    api files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
 }
