--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.application'
 
+def keystorePropertiesFile= rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
-    compileSdkVersion 21
-    buildToolsVersion '27.0.3'
+    compileSdk 21
     defaultConfig {
         applicationId "com.exact.imis.enquire"
         minSdkVersion 7
@@ -29,6 +32,6 @@ android {
 }
 
 dependencies {
-    compile project(':CaptureActivity')
-    compile project(':General')
+    implementation project(':CaptureActivity')
+    implementation project(':General')
 }
