--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,12 +3,8 @@ workflows:
     name: Native Android
     max_build_duration: 60
     scripts:
-      - name: Android emulator 
-        script: emulator -avd emulator > /dev/null 2>&1 &
-      - name: Run tests
-        script: ./gradlew test
-      - name: Instrumented unit tests 
-        script: ./gradlew connectedAndroidTest
+     # - name: Run tests
+       # script: ./gradlew test
       - name: Build debug apk
         script: ./gradlew assembleDebug
     artifacts:
