--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,8 +3,13 @@ workflows:
     name: Native Android
     max_build_duration: 60
     scripts:
-     # - name: Run tests
-       # script: ./gradlew test
+    #...
+      - |
+        # give permission
+        chmod +x gradlew
+
+      - name: Run tests
+        script: ./gradlew test
       - name: Build debug apk
         script: ./gradlew assembleDebug
     artifacts:
