--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,11 @@ workflows:
     name: Native Android
     max_build_duration: 60
     scripts:
+    #...
+      - |
+        # give permission
+        chmod +x gradlew
+
       - name: Run tests
         script: ./gradlew test
       - name: Build debug apk
