--- a/CaptureActivity/build.gradle
+++ b/CaptureActivity/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 7
+    compileSdk 21
 
     defaultConfig {
-        minSdkVersion 7
-        targetSdkVersion 7
+        minSdkVersion 21
+        targetSdkVersion 21
     }
 
     buildTypes {
