--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdk 26
     defaultConfig {
         applicationId "com.exact.imis.enquire"
-        minSdkVersion 7
-        targetSdkVersion 7
+        minSdkVersion 21
+        targetSdkVersion 21
 
     }
     buildTypes {
@@ -16,10 +16,12 @@ android {
     }
     productFlavors {
     }
-    buildToolsVersion '30.0.3'
+    buildToolsVersion '26.0.3'
 }
 
 dependencies {
     implementation project(':CaptureActivity')
     implementation project(':General')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 }
